@@ -49,12 +49,18 @@ TlsTcpSocket_TcpServer_Test::initTestCase()
 void
 TlsTcpSocket_TcpServer_Test::checkConnectionInit()
 {
+    // init server
     UNITTEST(m_server->initServer(12345), true);
     UNITTEST(m_server->start(), true);
-    m_socketSocketSide = new TlsTcpSocket("127.0.0.1",
+
+    // init client
+    m_socketClientSide = new TlsTcpSocket("127.0.0.1",
                                           12345,
                                           "/tmp/cert.pem",
                                           "/tmp/key.pem");
+    UNITTEST(m_socketClientSide->initSocket(), true);
+    UNITTEST(m_socketClientSide->initOpenssl(), true);
+
     usleep(10000);
 
     UNITTEST(m_server->getNumberOfSockets(), 1);
@@ -74,7 +80,7 @@ TlsTcpSocket_TcpServer_Test::checkLittleDataTransfer()
     usleep(10000);
 
     std::string sendMessage("poipoipoi");
-    UNITTEST(m_socketSocketSide->sendMessage(sendMessage), true);
+    UNITTEST(m_socketClientSide->sendMessage(sendMessage), true);
     usleep(10000);
     UNITTEST(m_buffer->getNumberOfWrittenBytes(), 9);
 
@@ -98,10 +104,10 @@ void
 TlsTcpSocket_TcpServer_Test::checkBigDataTransfer()
 {
     std::string sendMessage = "poi";
-    UNITTEST(m_socketSocketSide->sendMessage(sendMessage), true);
+    UNITTEST(m_socketClientSide->sendMessage(sendMessage), true);
     for(uint32_t i = 0; i < 99999; i++)
     {
-        m_socketSocketSide->sendMessage(sendMessage);
+        m_socketClientSide->sendMessage(sendMessage);
     }
     usleep(100000);
     uint64_t totalIncom = m_buffer->getNumberOfWrittenBytes();
